opam-version: "2.0"
name: "my-app"
synopsis: "A short description of the app"
authors: "You"
homepage: "https://github.com/corp/my-app"
maintainer: "my-app@corp.com"
dev-repo: "git+ssh://git@github.com:corp/my-app.git"
bug-reports: "https://github.com/corp/my-app/issues"
version: "0.1"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "dune" {build}
  "opam-lock" {dev}
  "opium"
]
